[tool.poetry]
name = "aceo_bot"
version = "0.1.0"
description = ""
authors = ["Nikakto <mcgish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pypiwin32 = "^223"
tesseract = "^0.1.3"
pydantic = "^1.10.1"
psutil = "^5.9.1"
PyDirectInput = "^1.0.4"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
